force-app/main/default/objects/BL_Competitor__c/BL_Competitor__c.object-meta.xml
<CustomObject>
    <label>Competitor</label>
    <nameField>
        <displayFormat>CP-{0000000}</displayFormat>
        <label>Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>