force-app/main/default/objects/BL_Competitor__c/fields/GamesDrawn__c.field-meta.xml
<CustomField>
    <fullName>GamesDrawn__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GamesDrawn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>