force-app/main/default/objects/BL_Competitor__c/fields/GamesLost__c.field-meta.xml
<CustomField>
    <fullName>GamesLost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GamesLost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>