force-app/main/default/objects/BL_Competitor__c/fields/GoalsDraw__c.field-meta.xml
<CustomField>
    <fullName>GoalsDraw__c</fullName>
    <formula>GoalsFor__c -  GoalsAgainst__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GoalsDraw</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>