force-app/main/default/objects/BL_Competitor__c/fields/GoalsFor__c.field-meta.xml
<CustomField>
    <fullName>GoalsFor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GoalsFor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>