force-app/main/default/objects/BL_Competitor__c/fields/Is_Direct_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Is_Direct_Competitor__c</fullName>
    <formula>IF(
  Competition__r.RecordType.DeveloperName != &quot;Battle_Royale&quot;,
  true,
  Team__r.RecordType.DeveloperName = &apos;Battle_Royale&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Direct Competitor</label>
    <type>Checkbox</type>
</CustomField>