force-app/main/default/objects/BL_Competitor__c/fields/MatchesPlayed__c.field-meta.xml
<CustomField>
    <fullName>MatchesPlayed__c</fullName>
    <formula>GamesDrawn__c + GamesLost__c + GamesWon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matches Played</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>