force-app/main/default/objects/BL_Competitor__c/fields/RoundsWon__c.field-meta.xml
<CustomField>
    <fullName>RoundsWon__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RoundsWon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>