force-app/main/default/objects/BL_Competitor__c/fields/SinglePlayer__c.field-meta.xml
<CustomField>
    <fullName>SinglePlayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Single Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>