force-app/main/default/objects/BL_Competitor__c/listViews/All_competitors.listView-meta.xml
<ListView>
    <fullName>All_competitors</fullName>
    <columns>NAME</columns>
    <columns>Team_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All competitors</label>
</ListView>